[package]
name = "hello"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
curv-kzen = { version = "0.9", default-features = false }
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
